fix attempt of overflow bug from animations

--- a/components/projects/projects.module.css
+++ b/components/projects/projects.module.css
@@ -41,6 +41,10 @@
   line-height: 1.5rem;
 }
 
+.projectsTextContainer, .projectTextAndImageContainer, .buttonMainContainer {
+  overflow: hidden;
+}
+
 /* --------> Project modal styles: */
 
 .modalPicContainer {
